fix h1 size on mobile

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -233,6 +233,12 @@ h1, .uk-h1 {
   letter-spacing: 0.82px;
   margin-bottom: 20px;
 }
+@media (max-width: $breakpoint-small-max) {
+  h1, .uk-h1 {
+    font-size: $base-h1-font-size/1.3;
+    line-height: $base-h1-line-height/1.3;
+  }
+}
 h2, .uk-h2 {
   letter-spacing: 0.82px;
   font-weight: 300 !important;
